@@ -1,3 +1,9 @@
+2000-02-25  Larry Jones  <larry.jones@sdr.com>
+
+	* log.pl: Get committer from command line instead of getlogin
+	so that client/server works correctly.
+	* loc_accum.pl: Ditto.
+
 2000-01-24  K.J. Paradise <kj@sourcegear.com>
 
 	* sccs2rcs.csh: fixed a y2k bug.  This was submitted 
